<resources>
    <string name="app_name">泰富重装</string>
    <string name="title_name">泰富重装托辊焊接线</string>
    <string name="attendance">当日排班人员</string>
    <string name="produce_state">当日生产状况</string>
    <string name="robot_state">机器人状态</string>
    <string name="statistics">生产统计</string>
    <string name="weld_elec_line">焊接电流曲线</string>
    <string name="weld_vol_line">焊接电压曲线</string>
    <string name="weld_robot1">焊接机器人1</string>
    <string name="weld_robot2">焊接机器人2</string>
    <string name="weld_robot3">焊接机器人3</string>
    <string name="weld_robot4">焊接机器人4</string>
    <string name="weld_robot5">焊接机器人5</string>
    <string name="weld_robot6">焊接机器人6</string>
    <string name="material_robot1">上料机器人</string>
    <string name="carry_robot">搬运机器人</string>
    <string name="weld_electricity">焊接机器人电流</string>
    <string name="weld_voltage">焊接机器人电压</string>

</resources>
