<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Title.Inverse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_50PX"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/robot_state" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_40PX"
        android:layout_marginTop="@dimen/DIMEN_5PX"
        android:paddingLeft="@dimen/DIMEN_20PX">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/weld_robot1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_weld1State"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/green_circle"
            android:gravity="center_vertical"
            android:text="正常"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/weld_robot2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_weld2State"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/green_circle"
            android:text="正常"
            android:textSize="@dimen/DIMEN_20PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_40PX"
        android:layout_marginTop="@dimen/DIMEN_5PX"
        android:paddingLeft="@dimen/DIMEN_20PX">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/weld_robot3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_weld3State"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/red_circle"
            android:gravity="center_vertical"
            android:text="异常"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/weld_robot4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_weld4State"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/green_circle"
            android:gravity="center_vertical"
            android:text="正常"
            android:textSize="@dimen/DIMEN_20PX" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_40PX"
        android:layout_marginTop="@dimen/DIMEN_5PX"
        android:paddingLeft="@dimen/DIMEN_20PX">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/weld_robot5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_weld5State"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/green_circle"
            android:gravity="center_vertical"
            android:text="正常"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/weld_robot6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_weld6State"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/green_circle"
            android:gravity="center_vertical"
            android:text="正常"
            android:textSize="@dimen/DIMEN_20PX" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_40PX"
        android:layout_marginTop="@dimen/DIMEN_5PX"
        android:paddingLeft="@dimen/DIMEN_20PX">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/material_robot1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_materialrobotState"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/red_circle"
            android:gravity="center_vertical"
            android:text="异常"
            android:textSize="@dimen/DIMEN_20PX" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/carry_robot"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/DIMEN_20PX" />

        <TextView
            android:id="@+id/tv_carrierState"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@mipmap/red_circle"
            android:gravity="center_vertical"
            android:text="异常"
            android:textSize="@dimen/DIMEN_20PX" />
    </LinearLayout>
</LinearLayout>


